; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/compress/extr_brotli.c_on_dispose.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/compress/extr_brotli.c_on_dispose.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_brotli_context_t = type { %struct.TYPE_4__, %struct.TYPE_3__, i32 }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @on_dispose to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @on_dispose(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.st_brotli_context_t*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.st_brotli_context_t*
  store %struct.st_brotli_context_t* %5, %struct.st_brotli_context_t** %3, align 8
  %6 = load %struct.st_brotli_context_t*, %struct.st_brotli_context_t** %3, align 8
  %7 = getelementptr inbounds %struct.st_brotli_context_t, %struct.st_brotli_context_t* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @BrotliEncoderDestroyInstance(i32 %8)
  %10 = load %struct.st_brotli_context_t*, %struct.st_brotli_context_t** %3, align 8
  %11 = call i32 @shrink_buf(%struct.st_brotli_context_t* %10, i32 0)
  %12 = load %struct.st_brotli_context_t*, %struct.st_brotli_context_t** %3, align 8
  %13 = getelementptr inbounds %struct.st_brotli_context_t, %struct.st_brotli_context_t* %12, i32 0, i32 1
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @free(i32 %15)
  %17 = load %struct.st_brotli_context_t*, %struct.st_brotli_context_t** %3, align 8
  %18 = getelementptr inbounds %struct.st_brotli_context_t, %struct.st_brotli_context_t* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @free(i32 %20)
  ret void
}

declare dso_local i32 @BrotliEncoderDestroyInstance(i32) #1

declare dso_local i32 @shrink_buf(%struct.st_brotli_context_t*, i32) #1

declare dso_local i32 @free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
